# rdn-classic

./: .gitignore  CLAUDE.md  PLAN.md  TRAINING_AGENTS.md  TRAINING_MODES.md  TRAINING_TASKS.md  grid.sh  ideas.txt  ingest.sh  profile_hotpath.sh  profile_simple.sh  profile_training.sh  pyproject.toml  run_grid.sh  speedrun.sh  test_e2e.sh
dev/: gen_synthetic_data.py
generator/: README.md  USAGE.md  __init__.py  app.py  dimension.py  evaluator.py  generator_calc.py  generator_ttt.py  puzzle_generator.py  puzzle_loop.py  puzzle_loop2.py  tool_commands.json  unified.py
nanochat/: core_eval.py  dataloader.py  dataset.py  engine.py  gpt-Copy1.py  gpt.py  loss_eval.py  muon.py  tokenizer.py  ui.html
rdn/: checkpoint_manager.py  common.py  core_eval.py  dataloader.py  dataset.py  engine.py  gpt.py  gpu_coordinates.py  hierarchical_dataloader.py  loss_eval.py  optim.py  prefetch_dataloader.py  report.py  tokenizer.py  utils.py
rdt/: Cargo.toml
rdt/src/: lib.rs
rustbpe/src/: lib.rs  librsold.rs
scripts/: base_eval.py  base_loss.py  base_train.py  chat_cli.py  chat_eval.py  chat_rl.py  chat_sft.py  chat_web.py  mid_train.py  tok_eval.py  tok_train.py
tasks/: humaneval.py  spellingbee.py
tests/: test_engine.py  test_rustbpe.py  test_tokenizer.py
tool_use/test/: state.json
tool_use/train/: data-00000-of-00001.arrow  state.json
tool_use/val/: data-00000-of-00001.arrow
